# sims2-4k-ui-patch

./: .gitignore  .gitmodules  .pylintrc  Cargo.toml  DEVELOPMENT.md  README.md  dbpf.py  gamefile.py  patches.py  qfs.py  requirements.txt  setup.py  sims2-4k-ui-converter.py  sims2_4k_ui_converter.py  sims2_4k_ui_patcher.py
.github/ISSUE_TEMPLATE/: 01-visual-bug.yaml  02-patcher-bug.yaml
.github/workflows/: build.yml  lint.yml  test.yml
assets/: github.url
rust/sims2patcher-core/: Cargo.toml
rust/sims2patcher-core/src/: dbpf.rs  error.rs  lib.rs  patches.rs  qfs.rs  uiscript.rs
rust/sims2patcher-py/: Cargo.toml  pyproject.toml
rust/sims2patcher-py/src/: lib.rs
sims2patcher/: dbpf.py  errors.py  exe_patches.py  gamefile.py  patches.py  qfs.py  rustpatch.py  uiscript.py  widgets.py
tests/: test_base.py  test_dbpf.py  test_gamefile.py  test_patches.py  test_qfs.py  test_real_package.py  test_tools.py  test_uiscript.py
tests/files/: FontStyle-A.ini  FontStyle-B.ini  index_7.2.package  index_7.2_compressed.package  test.package
tests/files/src/: create_test_package.py  image1.tga  image2.tga  uiscript1.txt  uiscript2.txt  uiscript3.txt
tests/gamefiles/: .gitkeep
tools/: benchmark_qfs.py  create_global_csv.py  extract_all_packages.py  extract_many_packages.py  extract_package.py  uiscript_inspector_qt.py  update_package.py  view_package_stats.py
tools/inspector_data/: inspector.css  inspector.html  inspector.js
