[package]
name = "sims2patcher-py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sims2patcher_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
sims2patcher-core = { path = "../sims2patcher-core" }
